--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     
 <p>Git + GitHub</p>
-
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur odio id ut labore voluptatibus ullam, sit libero quasi provident ipsa exercitationem eius amet consequatur in earum, dolores voluptatum officiis. Sed.</h2>
+    <p>Hello</p>
 </body>
 </html>
